--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -15,6 +15,7 @@
 		<h1>Selamat Datang di <span class="brand">RukoMerch</span>!</h1>
 	</nav>
 
+	{% block content %}
 	<main>
 		<div class="grid-gap-1">
 			<h2>Produk Kami</h2>
@@ -31,6 +32,8 @@
 			</div>
 		</div>
 	</main>
+	{% endblock %}
+
 </body>
 
 </html>
