--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -16,6 +16,7 @@
 		<div id="navbar-link">
 			<a href="/">Home</a>
 			<a href="/create/item">Add Item</a>
+			<a href="{% url 'main:logout' %}">Log Out</a>
 		</div>
 	</nav>
 
