feat: add cookies

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -24,6 +24,7 @@
 		{% block content %}
 		<div class="grid-gap-1">
 			<div id="title-and-add">
+				<p>Terakhir login: {{ last_login }}</p>
 				<div>
 					<h2>Produk Kami</h2>
 					{% if items %}
