--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -16,16 +16,16 @@
 			{{ form.as_table }}
 			<tr>
 				<td></td>
-				<td><input type="submit" name="submit" value="Daftar" /></td>
+				<td><input class="submit-yellow submit-effect" type="submit" name="submit" value="Daftar" /></td>
 			</tr>
 		</table>
 	</form>
 
 	{% if messages %}
-	<ul>
-		{% for message in messages %}
-		<li>{{ message }}</li>
-		{% endfor %}
+	<ul class="warning-login"></ul>>
+	{% for message in messages %}
+	<li>{{ message }}</li>
+	{% endfor %}
 	</ul>
 	{% endif %}
 
