--- a/main/templates/create_item.html
+++ b/main/templates/create_item.html
@@ -1,19 +1,21 @@
 {% extends 'index.html' %}
 
 {% block content %}
-<h1>Add New Item</h1>
+<div class="container-white">
+	<h1>Add New Item</h1>
 
-<form method="POST" enctype="multipart/form-data">
-	{% csrf_token %}
-	<table>
-		{{ form.as_table }}
-		<tr>
-			<td></td>
-			<td>
-				<input type="submit" value="Add Item" />
-			</td>
-		</tr>
-	</table>
-</form>
+	<form method="POST" enctype="multipart/form-data">
+		{% csrf_token %}
+		<table>
+			{{ form.as_table }}
+			<tr>
+				<td></td>
+				<td>
+					<input type="submit" value="Add Item" />
+				</td>
+			</tr>
+		</table>
+	</form>
+</div>
 
 {% endblock content %}
