--- a/main/templates/create_item.html
+++ b/main/templates/create_item.html
@@ -11,7 +11,7 @@
 			<tr>
 				<td></td>
 				<td>
-					<input type="submit" value="Add Item" />
+					<input class="submit-yellow submit-effect" type="submit" value="Add Item" />
 				</td>
 			</tr>
 		</table>
