--- a/main/templates/success.html
+++ b/main/templates/success.html
@@ -4,6 +4,6 @@
 <div id="success-page">
 	<h1>Sukses menambahkan item!</h1>
 	<h2>Emang boleh sesukses itu??? 😎</h2>
-	<a href="/" class="button margin-center">Kembali ke home</a>
+	<a href="/" class="button-yellow button-effect">Kembali ke home</a>
 </div>
 {% endblock content %}
