--- a/main/static/main/styles.css
+++ b/main/static/main/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap");
 
 body {
   font-family: "Montserrat", sans-serif;
@@ -62,6 +63,7 @@ nav.navbar {
 
 .brand {
   color: black;
+  font-family: "Dela Gothic One", cursive;
 }
 
 main {
@@ -81,6 +83,20 @@ main {
   border: var(--black-border);
   background-color: white;
   box-shadow: 10px 10px black;
+  transition: 0.075s ease-in;
+}
+
+.card:hover {
+  box-shadow: 0 0 black;
+}
+
+.card:last-child {
+  background-color: var(--yellow);
+}
+
+.card:last-child .tag,
+.card:last-child .delete-item-btn {
+  background-color: white;
 }
 
 .card > img {
