--- a/main/static/main/styles.css
+++ b/main/static/main/styles.css
@@ -424,3 +424,71 @@ textarea {
   justify-content: center;
   align-items: center;
 }
+
+.fade-in-animation {
+  animation-name: fade-in;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in;
+}
+.fade-in-animation {
+  animation-name: fade-out;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-out;
+}
+
+.pop-up-animation {
+  animation-name: pop-up;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-in;
+}
+.pop-down-animation {
+  animation-name: pop-down;
+  animation-duration: 0.3s;
+  animation-timing-function: ease-out;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes pop-up {
+  0% {
+    scale: 0.8;
+  }
+
+  80% {
+    scale: 1.2;
+  }
+
+  100% {
+    scale: 1;
+  }
+}
+
+@keyframes pop-down {
+  0% {
+    scale: 1;
+  }
+
+  80% {
+    scale: 1.2;
+  }
+
+  100% {
+    scale: 0;
+  }
+}
