--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -87,10 +87,10 @@
 		}
 
 		#card-container {
-			display: grid;
-			grid-template-columns: repeat(4, 1fr);
-			place-items: center;
-			gap: 1rem;
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			justify-content: center;
 		}
 
 		.card {
